# opengpl

./: .gitignore  README.md
.github/workflows/: check-version.yml  release-schema.yml  release-sdk.yml  release-sidecar.yml
docs/plans/: 2026-03-06-github-workflows-design.md  2026-03-06-github-workflows-fixes.md  2026-03-07-governance-policy-language-rename-design.md  2026-03-07-governance-policy-language-rename.md
sdk/: README.md  pyproject.toml
sdk/src/opengpl/: __init__.py  api.py  cli.py  engine.py  loader.py  models.py
sdk/src/opengpl/audit/: ledger.py  oscal.py
sdk/src/opengpl/detectors/: injection.py  jailbreak.py  pii.py
sdk/src/opengpl/gates/: input_gate.py  model_gate.py  output_gate.py
sdk/src/opengpl/schemas/: opengpl-v0.1.json
sdk/tests/: test_api.py  test_audit.py  test_cli.py  test_detectors.py  test_engine.py  test_gates.py  test_loader.py
sidecar/: Dockerfile  README.md  api.py  docker-compose.example.yml
spec/: CHANGELOG.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-SPEC  SPEC.md
spec/docs/: compliance-mapping.md  enforcement-model.md  integration-guide.md
spec/examples/: dev-sandbox.gpl  fedramp-moderate.gpl  healthcare-hipaa.gpl  minimal.gpl  multi-agent.gpl
spec/schemas/: opengpl-v0.1.yaml
spec/scripts/: validate_examples.py
